# POO_II-Trabalho_Final

./: README.md  docker-compose.yml  requirements.txt  telaPrincipal2.py
Telas Final/: images.qrc  images_rc.py  telaBuscar.py  telaBuscarVazia.py  telaBuscarVazia.ui  telaCesta.py  telaCesta.ui  telaCestaVazia.py  telaCestaVazia.ui  telaChat.py  telaChat.ui  telaGerenciar.py  telaGerenciar.ui  telaOfertas.py  telaOfertas.ui  telaPrincipal.py  telaPrincipal.ui  telaProdutos.py
Telas Final/Telas/: telaBuscar.py  telaBuscarVazia.py  telaCesta.py  telaCestaVazia.py  telaGerenciar.py  telaPrincipal.py  telaProdutos.py  telaProdutos.ui
Telas Final/images/: images_rc.py
Telas Final/ui/: telaBuscar.ui  telaCestaVazia.ui  telaPrincipal.ui
Telas_Final/: images.qrc  telaBuscarVazia.py  telaCesta.py  telaCestaVazia.py  telaGerenciar.py  telaProdutos.py
Telas_Final/Telas/: images_rc.py  telaBuscar.py  telaBuscarVazia.py  telaCesta.py  telaPrincipal.py  telaProdutos.py  telaProdutos.ui
bd/: __init__.py  postgres.py  script_query.py  test_postgres.py
bd/entities/: __init__.py  medicamento.py  reserva.py  test_medicamento.py  test_reserva.py
chat/: __init__.py  cliente.py  funcionario.py  server.py  test_server.py  test_user_admin_class.py  test_user_client_class.py  user_class.py  variaveis.py
postgres_package/: pyproject.toml
postgres_package/src/postgresdb/: __init__.py  postgresdb.py
